P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/33_invalid_record_function_name.lava
record Point(int x);

int Point() {
  return 1;
}
